--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,229 @@
-hello, Ahmed!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cpu Scheduling program</title>
+  <style>
+    /* General Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      background: url('images/background.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+    }
+
+    /* Navigation Bar */
+    nav {
+      background: linear-gradient(to right, #8f94fb, #4e54c8);
+      padding: 1rem;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #ffccff; /* Light pink hover color */
+    }
+
+    /* Image Section */
+    .image-section {
+      flex-grow: 1;
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 40px;
+    }
+
+    .image-section h1 {
+      font-size: 3rem;
+      font-weight: bold;
+      background: rgba(0, 0, 0, 0.5); /* Semi-transparent background for text */
+      padding: 1rem 2rem;
+      border-radius: 8px;
+    }
+
+    /* Loan Prediction Form */
+    .loan-prediction-form {
+      background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background for form */
+      padding: 20px;
+      margin: 20px auto;
+      border-radius: 10px;
+      max-width: 500px;
+    }
+
+    .loan-prediction-form label {
+      display: block;
+      margin-top: 10px;
+    }
+
+    .loan-prediction-form input {
+      margin-bottom: 10px;
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+    }
+
+    .loan-prediction-form button {
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #4e54c8;
+      color: white;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+    }
+
+    .loan-prediction-form button:hover {
+      background-color: #8f94fb;
+    }
+
+    /* Footer */
+    footer {
+      background: linear-gradient(to right, #4e54c8, #8f94fb);
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+      box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    footer p {
+      font-size: 1rem;
+    }
+
+    /* Histogram Section */
+    #basic-histogram, #status-split-histogram {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 20px auto;
+    }
+
+    /* Dropdown Style */
+    .loan-prediction-form select {
+      margin-bottom: 10px;
+      width: 100%;
+      padding: 10px;
+      background-color: #4e54c8; /* Matching background */
+      color: white;
+      border: 2px solid #8f94fb;
+      border-radius: 5px;
+      font-size: 1rem;
+      transition: background-color 0.3s ease, border-color 0.3s ease;
+    }
+
+      .loan-prediction-form select:hover {
+        background-color: #8f94fb;
+        border-color: #4e54c8;
+    }
+
+    @media screen and (max-width: 600px) {
+      .image-section h1 {
+        font-size: 2rem;
+      }
+
+      .loan-prediction-form {
+        padding: 15px;
+        width: 90%; /* Adjust width on small screens */
+      }
+    }
+  </style>
+  <script>
+    // Function to fetch available columns from FastAPI
+    async function loadColumns() {
+      try {
+        const response = await fetch('http://127.0.0.1:8000/columns');
+        const data = await response.json();
+        const dropdown = document.getElementById("feature_name");
+
+        dropdown.innerHTML = "";
+        data.columns.forEach(column => {
+          if (column !== "loan_status" && column !== "id") {
+            const option = document.createElement("option");
+            option.value = column;
+            option.innerText = column;
+            dropdown.appendChild(option);
+          }
+        });
+      } catch (error) {
+        console.error('Error fetching columns:', error);
+      }
+    }
+
+    // Combined function to fetch both histograms
+    async function getHistograms() {
+      const featureName = document.getElementById("feature_name").value;
+
+      // Fetching basic histogram
+      const basicResponse = await fetch(`/histogram/${featureName}`);
+      const basicImageBlob = await basicResponse.blob();
+      const basicImgElement = document.getElementById("basic-histogram");
+      basicImgElement.src = URL.createObjectURL(basicImageBlob);
+
+      // Fetching status split histogram
+      const statusResponse = await fetch(`/histogram/status/${featureName}`);
+      const statusImageBlob = await statusResponse.blob();
+      const statusImgElement = document.getElementById("status-split-histogram");
+      statusImgElement.src = URL.createObjectURL(statusImageBlob);
+    }
+
+    window.onload = loadColumns;
+  </script>
+</head>
+<body>
+  <!-- Header with Navigation Bar -->
+  <div id="header-container"></div>
+
+  <!-- Image Section -->
+  <div class="image-section">
+    <h1>Welcome to the Loan Prediction App</h1>
+  </div>
+
+  <!-- Loan Prediction and Feature Histogram -->
+  <div class="loan-prediction-form">
+    <h2>Feature Histogram</h2>
+    <label for="feature_name">Feature Name:</label>
+    <select id="feature_name">
+      <!-- Options will be added dynamically -->
+    </select><br>
+
+    <!-- Single button to fetch both histograms -->
+    <button onclick="getHistograms()">Get Both Histograms</button>
+
+    <h3>Basic Histogram (Feature Distribution):</h3>
+    <img id="basic-histogram" alt="Basic Feature Histogram" />
+
+    <h3>Histogram Split by Loan Status:</h3>
+    <img id="status-split-histogram" alt="Histogram by Loan Status" />
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 My Loan App. All rights reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
