better ui ux expericne for your eyes

--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-      background: url('images/background.jpg') no-repeat center center fixed;
+      background: url('images/image.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
     }
@@ -198,30 +198,12 @@
 
   <!-- Image Section -->
   <div class="image-section">
-    <h1>Welcome to the Loan Prediction App</h1>
-  </div>
-
-  <!-- Loan Prediction and Feature Histogram -->
-  <div class="loan-prediction-form">
-    <h2>Feature Histogram</h2>
-    <label for="feature_name">Feature Name:</label>
-    <select id="feature_name">
-      <!-- Options will be added dynamically -->
-    </select><br>
-
-    <!-- Single button to fetch both histograms -->
-    <button onclick="getHistograms()">Get Both Histograms</button>
-
-    <h3>Basic Histogram (Feature Distribution):</h3>
-    <img id="basic-histogram" alt="Basic Feature Histogram" />
-
-    <h3>Histogram Split by Loan Status:</h3>
-    <img id="status-split-histogram" alt="Histogram by Loan Status" />
+    <h1>CPU Scheduling Simulation program</h1>
   </div>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 My Loan App. All rights reserved.</p>
+    <p>&copy; 2024 My CPU. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
